# AethvionDB

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  LICENSE  README.md  Start_AethvionDB.bat  pyproject.toml
aethviondb/: __init__.py  _utils.py  ai_runtime.py  backup.py  baker.py  chunker.py  cli.py  client.py  config.py  db_registry.py  distiller.py  entity_schema.py  entity_writer.py  events.py  expansion_engine.py  file_manifest.py  folder_distiller.py  importer.py  kind_registry.py  llm.py  name_index.py  server.py  settings_store.py  snapshot.py  validator.py  vectorizer.py
aethviondb/api_v1/: __init__.py  auth.py  baked_routes.py  raw_routes.py  response.py  router.py
aethviondb/importers/: __init__.py  api.py  base.py  snapshot.py  sqlite.py
aethviondb/web/: index.html
benchmarks/: bench.py
docs/: AGENTS.md  API.md  LIBRARY.md  QUICKSTART.md  STORAGE_FORMAT.md
layer2/aethviondb-mcp/: README.md  mcp_server.py  pyproject.toml
tests/: conftest.py  test_aethviondb_core.py  test_aethviondb_crud.py  test_api.py  test_backup.py  test_baked.py  test_cli.py  test_client.py  test_concurrency.py  test_distill.py  test_events.py  test_mcp.py  test_schema_version.py  test_stress.py  test_validator.py
