[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aethviondb"
version = "0.1.0"
description = "An agent-first knowledge database — typed entity graph with durable one-file-per-entity storage and purpose-baked snapshots."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Aethvion" }]
keywords = ["ai", "agents", "database", "knowledge-graph", "entity-graph", "memory", "self-hosted"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "filelock>=3.12",
]

[project.optional-dependencies]
# Local embedding generation (vector search works on caller-supplied vectors
# without these; this is only needed to GENERATE embeddings locally).
embeddings = ["sentence-transformers>=2.2.0"]
# Third-party embedding providers.
openai = ["openai>=1.0.0"]
google = ["google-genai>=1.0.0"]
dev = ["pytest>=7.0"]

[project.scripts]
aethviondb = "aethviondb.cli:main"
aethviondb-server = "aethviondb.server:main"

[project.urls]
Homepage = "https://github.com/Aethvion/AethvionDB"
Repository = "https://github.com/Aethvion/AethvionDB"
"Bug Tracker" = "https://github.com/Aethvion/AethvionDB/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aethviondb*"]

[tool.setuptools.package-data]
aethviondb = ["web/*.html", "web/*.css", "web/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
