[project]
name = "aethviondb-mcp"
version = "0.1.0"
description = "Layer 2 MCP server for AethvionDB — exposes the knowledge base as agent tools."
authors = [{ name = "Aethvion" }]
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "aethviondb>=0.1.0",
]

[project.scripts]
aethviondb-mcp = "mcp_server:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mcp_server"]
